<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <org.fossify.commons.views.MySearchMenu
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/main_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.messages.views.HomaPillConversationFolderTabsView
            android:id="@+id/folder_tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_coordinator_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/folder_tabs">
            <RelativeLayout
                android:id="@+id/main_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/conversations_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:hideAnimationBehavior="outward"
                    app:showAnimationBehavior="inward"
                    app:showDelay="250"
                    tools:visibility="visible" />
                <org.fossify.commons.views.MyTextView
                    android:id="@+id/no_conversations_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/no_conversations_found"
                    android:textSize="18sp"
                    android:visibility="gone" />
                <org.fossify.commons.views.MyTextView
                    android:id="@+id/no_conversations_placeholder_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/no_conversations_placeholder"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ripple_all_corners"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/start_conversation"
                    android:textSize="16sp"
                    android:visibility="gone" />
                <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
                    android:id="@+id/conversations_fastscroller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <org.fossify.commons.views.MyRecyclerView
                        android:id="@+id/conversations_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:layoutAnimation="@anim/layout_animation"
                        android:overScrollMode="ifContentScrolls"
                        android:scrollbars="none"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
            </RelativeLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <RelativeLayout
            android:id="@+id/search_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/folder_tabs"
            android:alpha="0"
            android:visibility="gone">
            <org.fossify.commons.views.MyTextView
                android:id="@+id/search_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:alpha="0.8"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/no_items_found"
                android:textSize="18sp" />
            <org.fossify.commons.views.MyTextView
                android:id="@+id/search_placeholder_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_placeholder"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                android:text="@string/type_2_characters"
                android:textSize="18sp" />
            <org.fossify.commons.views.MyRecyclerView
                android:id="@+id/search_results_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </RelativeLayout>
    </RelativeLayout>

    <org.fossify.commons.views.MyFloatingActionButton
        android:id="@+id/conversations_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_plus_vector"
        app:applyWindowInsets="true" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
