<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:elevation="2dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">
    <RelativeLayout
        android:id="@+id/scheduled_message_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/section_holder_stroke"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/thread_attachments_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">
        <ImageView android:id="@+id/scheduled_message_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/scheduled_message_button" android:layout_alignBottom="@id/scheduled_message_button" android:padding="12dp" android:src="@drawable/ic_clock_vector" />
        <org.fossify.commons.views.MyTextView android:id="@+id/scheduled_message_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toStartOf="@id/discard_scheduled_message" android:layout_toEndOf="@id/scheduled_message_icon" android:background="@drawable/ripple_background" android:clickable="true" android:focusable="true" android:gravity="center_vertical" android:minHeight="48dp" android:paddingStart="8dp" android:paddingEnd="16dp" android:textSize="14sp" tools:ignore="HardcodedText" tools:text="Tomorrow at 6PM GMT +05:30" />
        <ImageView android:id="@+id/discard_scheduled_message" android:layout_width="48dp" android:layout_height="48dp" android:layout_alignParentEnd="true" android:background="?selectableItemBackgroundBorderless" android:contentDescription="@string/cancel_schedule_send" android:padding="12dp" android:src="@drawable/ic_cross_vector" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thread_attachments_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:scrollbars="none"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/thread_type_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="2"
        tools:listitem="@layout/item_attachment_document_preview"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/thread_add_attachment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/attachment"
        android:padding="12dp"
        android:src="@drawable/ic_plus_vector"
        app:layout_constraintBottom_toBottomOf="@id/thread_type_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/thread_type_message" />
    <org.fossify.commons.views.MyEditText
        android:id="@+id/thread_type_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/section_holder_stroke"
        android:gravity="center_vertical"
        android:hint="@string/type_a_message"
        android:inputType="textCapSentences|textMultiLine"
        android:minHeight="48dp"
        android:maxLines="8"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        app:layout_constraintBottom_toTopOf="@id/attachment_picker_divider"
        app:layout_constraintEnd_toStartOf="@id/thread_select_sim_icon"
        app:layout_constraintStart_toEndOf="@id/thread_add_attachment" />
    <ImageView android:id="@+id/thread_select_sim_icon" android:layout_width="48dp" android:layout_height="48dp" android:alpha="0.9" android:background="?attr/selectableItemBackgroundBorderless" android:padding="12dp" android:src="@drawable/ic_sim_vector" android:visibility="gone" app:layout_constraintBottom_toBottomOf="@id/thread_type_message" app:layout_constraintEnd_toStartOf="@id/thread_character_counter" app:layout_constraintTop_toTopOf="@id/thread_type_message" tools:visibility="visible" />
    <TextView android:id="@+id/thread_select_sim_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="14sp" android:visibility="gone" app:layout_constraintBottom_toBottomOf="@id/thread_select_sim_icon" app:layout_constraintEnd_toEndOf="@id/thread_select_sim_icon" app:layout_constraintStart_toStartOf="@id/thread_select_sim_icon" app:layout_constraintTop_toTopOf="@id/thread_select_sim_icon" tools:text="1" tools:visibility="visible" />
    <org.fossify.commons.views.MyTextView android:id="@+id/thread_character_counter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:paddingStart="8dp" android:paddingEnd="8dp" android:text="0" android:textSize="14sp" android:visibility="gone" app:layout_constraintBottom_toBottomOf="@id/thread_type_message" app:layout_constraintEnd_toStartOf="@id/thread_send_message" app:layout_constraintTop_toTopOf="@id/thread_type_message" tools:ignore="HardcodedText" tools:visibility="visible" />
    <org.fossify.commons.views.MyButton
        android:id="@+id/thread_send_message"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:alpha="0.4"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="false"
        android:contentDescription="@string/ok"
        android:drawableTop="@drawable/ic_send_vector"
        android:paddingVertical="8dp"
        android:text="@string/sms"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/thread_type_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/thread_type_message" />
    <View android:id="@+id/attachment_picker_divider" android:layout_width="match_parent" android:layout_height="@dimen/divider_height" android:background="?attr/colorOutlineVariant" android:importantForAccessibility="no" app:layout_constraintBottom_toTopOf="@id/attachment_picker_holder" />
    <ScrollView android:id="@+id/attachment_picker_holder" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="8dp" android:overScrollMode="always" android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" tools:visibility="visible">
        <include android:id="@+id/attachment_picker" layout="@layout/layout_attachment_picker" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>